# LEShaderConverter

./: .gitignore  CMakeLists.txt  CMakeSettings.json  DirectXShaderCompiler.cmake  LICENCE.TXT  README.md  arguments.cpp  arguments.h  headergenerator.cpp  headergenerator.h  main.cpp  md5.h  shadercompilationresult.h  shaderconverter.cpp  shaderconverter.h
shaders/: ps5_0_test.ps  vs5_0_include_header.vsh  vs5_0_include_test.vs  vs5_0_test.vs
